Closed
Bug 94023
Opened 24 years ago
Closed 24 years ago
<EMBED> tags load Java with no reason
Categories
(Core Graveyard :: Java: OJI, defect, P4)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.7
People
(Reporter: dv5a, Assigned: nis)
References
()
Details
(4 keywords)
Attachments
(1 file)
|
5.59 KB,
patch
|
peterlubczynski-bugs
:
review+
beard
:
superreview+
|
Details | Diff | Splinter Review |
BuildID: 2001080308
Any page with <EMBED> tag loads Java VM with no reason.
Reproducible: Always
Steps to Reproduce:
o to Any URL with <EMBED> tags
e.g. http://www.novamens.com/
Actual Results: Java VM gets loaded with no reason
Expected Results: Java VM should not load
This bug does not occur on Windows
My Java VM is "Java(TM) Plug-in Blackdown-1.3.1-FCS"
a
Severity: normal → minor
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P4
Comment 3•24 years ago
|
||
SPAM: reassigning all OJI bugs to new OJI QA, pmac ( 227 bugs)
QA Contact: shrir → pmac
Comment 4•24 years ago
|
||
I can reproduce this bug under Linux with Mozilla 0.9.3
Build: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.3) Gecko/20010801
Sun Java plugin version 1.3.1
Ressign to Joe Chou, as I am no longer working officially on OJI.
Assignee: edburns → joe.chou
Status: ASSIGNED → NEW
Target Milestone: --- → mozilla0.9.6
| Assignee | ||
Comment 6•24 years ago
|
||
Can not reproduce it with http://www.novamens.com/
but with original URL i saw java console opened as soon as i visited
that page. Need further investigation.
| Reporter | ||
Comment 7•24 years ago
|
||
Igor,
I think you could not reproduce the problem with http://www.novamens.com/
because that page has JavaScript code that detects if you have the "Shockwave
Flash" plugin installed on your machine. If you don't have that plugin then you
are redirected to a plain html page. Else you are redirected to a Flash page.
You can try to go to the Flash page directly to reproduce this bug.
http://www.novamens.com/flash/home0.html
Re-assign to laa.
Assignee: joe.chou → laa
Target Milestone: mozilla0.9.6 → mozilla0.9.9
| Assignee | ||
Comment 9•24 years ago
|
||
Well, i could not reproduce the problem anymore with today's trunk.
It seems it was fixed.
However, i see different problem - if you cancel attempt to download
plugin and then try to resize window - then you will be prompted again.
But this is not OJI-specific problem and therefore i suggest to
file new bug against plugins for this.
reporter: would you please verify whether original problem is
actually gone in latest nightly?
| Reporter | ||
Comment 10•24 years ago
|
||
The problem is *not* fixed with BuildID: 2001111314 on Linux
How to reproduce:
1. Close mozilla
2. Open a console terminal and verify that no "java" is running.
>ps -e | grep java
No java process should be running.
3. Open mozilla
4. Verify again that no java process is running
>ps -e | grep java
5. Go to http://edvista.com/claire/qt/embedtags/autoplayfalse.html
(or any page with <embed> tag)
6. Run again the "ps" command:
>ps -e | grep java
1239 pts/3 00:00:01 java_vm
1240 pts/3 00:00:00 java_vm
1241 pts/3 00:00:00 java_vm
:
:
1252 pts/3 00:00:00 java_vm
This problem is a Linux (Unix?) only bug. Windows works fine.
| Reporter | ||
Comment 11•24 years ago
|
||
**** top100 keyword because some Top100 sites use Flash or Realplayer plugins.
e.g Macromedia, CNN, etc.
| Assignee | ||
Comment 12•24 years ago
|
||
Sorry. I forgot that i disabled openning of java console by default.
In fact i can reproduce this.
I did some digging and found out that jvm startup is caused
by workaround to bug 83698.
See
http://lxr.mozilla.org/seamonkey/source/layout/html/base/src/nsObjectFrame.cpp#1266
In fact creation of proxyJNI is necessary if we want to startup
java plugin but not others.
Explicit check for mime type here (at ObjectFarme) seems to be not the best
idea.
I will check whether we can move proxyJNI creation to PluginHostImpl
where we have more freedom dealing with mime types.
Comment 13•24 years ago
|
||
You may be able to move it to nsPluginHostImpl::InstantiateEmbededPlugin():
http://lxr.mozilla.org/seamonkey/source/modules/plugin/base/src/nsPluginHostImpl.cpp#3151
..but it may need a little cleanup. I think a better way to check if we are Java
is to QI the plugin instance to a nsIJVMPluginInstance.
| Assignee | ||
Comment 14•24 years ago
|
||
I will attach patch that fix problem for me.
Basically i reverted fix for 83698 in nsObjectFrame
and moved it to nsPluginHostImpl.
peter: we can not QI for nsIJVMPluginInstance because we need to
do this before we create actual plugin instance (see 83698 for details)
Could someone review proposed patch?
| Assignee | ||
Comment 15•24 years ago
|
||
Comment 16•24 years ago
|
||
Comment on attachment 57933 [details] [diff] [review]
Proposed patch
I guess there isn't a better way of checking here for Java than just using the
mime-type. r=peterl
Attachment #57933 -
Flags: review+
| Assignee | ||
Comment 17•24 years ago
|
||
Could anybody make sr for proposed patch?
Comment 18•24 years ago
|
||
Comment on attachment 57933 [details] [diff] [review]
Proposed patch
sr=beard
Attachment #57933 -
Flags: superreview+
Comment 20•24 years ago
|
||
Patch checked in to the trunk, marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Target Milestone: mozilla0.9.9 → mozilla0.9.7
| Reporter | ||
Comment 21•24 years ago
|
||
I verify this bug is fixed in Build ID: 2001113006
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 22•24 years ago
|
||
I forgot to say: "Congratulations! Good job!" :-)
You need to log in
before you can comment on or make changes to this bug.
Description
•