Fix for always loading the Java VM for embed tag, patch by nis@sparc.spb.su (Igor Nekrestyanov) bug 94023 r=peterl sr=beard